[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=7]
[ext_resource path="res://HellSpawn.tscn" type="PackedScene" id=8]
[ext_resource path="res://Powerup.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3359.31, 4.48682, 0, 0, 0, 0, 5124.72, 1.98688, 0, 0, 0, 0, 8519.31, 9.71875, 0, 0, 0, 0, 8526.04, 4658.19, 0, 0, 0, 0, 9.43799, 4658.19, 0, 0, 0, 0, -3.11609, 2856.9, 0, 0, 0, 0, 0.814606, 1436.88, 0, 0, 0, 0, -0.777222, 1080, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 2 )
powerup_scene = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -834.0
margin_top = -1146.0
margin_right = 7940.0
margin_bottom = 4756.0
color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 2560, 1272 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, -5.99341 )
current = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = 0.00133564

[node name="PowerupPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PowerupSpawnLocation" type="PathFollow2D" parent="PowerupPath"]
rotation = 0.00133564

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 2560, 1272 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="HellSpawn" parent="." instance=ExtResource( 8 )]
position = Vector2( 3152.92, 479.981 )

[node name="HellSpawn4" parent="." instance=ExtResource( 8 )]
position = Vector2( 6538.31, 817.875 )

[node name="HellSpawn5" parent="." instance=ExtResource( 8 )]
position = Vector2( 1062.39, 3845.1 )

[node name="HellSpawn7" parent="." instance=ExtResource( 8 )]
position = Vector2( 7419.57, 2627.48 )

[node name="HellSpawn9" parent="." instance=ExtResource( 8 )]
position = Vector2( 4802.7, 4060.37 )

[node name="HellSpawn10" parent="." instance=ExtResource( 8 )]
position = Vector2( 4553.8, 2035.49 )

[node name="HellSpawn3" parent="." instance=ExtResource( 8 )]
position = Vector2( 792.926, 1591.29 )

[node name="TopWall" parent="." groups=[
"enemies",
] instance=ExtResource( 7 )]
position = Vector2( 4254.33, -20.3374 )
scale = Vector2( 135, 1 )
physics_material_override = null

[node name="LeftWall" parent="." groups=[
"enemies",
] instance=ExtResource( 7 )]
position = Vector2( -44.3145, 2309.97 )
rotation = 1.5708
scale = Vector2( 78, 1 )

[node name="BottomWall" parent="." groups=[
"enemies",
] instance=ExtResource( 7 )]
position = Vector2( 4254.33, 4691.07 )
scale = Vector2( 135, 1 )

[node name="RightWall" parent="." groups=[
"enemies",
] instance=ExtResource( 7 )]
position = Vector2( 8564.33, 2327.96 )
rotation = 1.5708
scale = Vector2( 78, 1 )
physics_material_override = null

[connection signal="bonus_points" from="Player" to="." method="_on_Player_bonus_points"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="name_change" from="HUD" to="Player" method="update_player_name"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
